test/org/midica/testfiles/failing/oto-at-end-of-block-2.midica
INCLUDE inc/instruments.midica

1: c
{
	1: c
	{
		1: d e
	}
	1: f (q=2)
}
1: g
